--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ronanokane/GTranslateApi#readme",
   "dependencies": {
     "@iamtraction/google-translate": "^2.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
